# netbox-plugin-dns

./: .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  netbox-plugin.yaml  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  lint.yml  manifest-modified.yaml  publish.yml  release.yml  test.yml
docs/: using_netbox_dns.md
examples/ansible/: using_netbox_dns_with_ansible.md
examples/contacts/: README.md  assign-contacts.yaml
examples/custom-scripts/: AXFR_Importer.py  DNS_IPAM_Updater.py  NetBox_DNS_Exporter.py  NetBox_DNS_Tenancy.py  using_custom_scripts.md
examples/custom-validation/: README_dnssync_perm.md  dnssync_dns_permission_validation.py
examples/custom-validators/: README_disable_record_type_change.md  README_dnssync_perm.md  disable_record_type_change.py  dnssync_perm.py
media/: configuration.testing.py
netbox_dns/: __init__.py  apps.py  filters.py  forms.py  middleware.py  models.py  navigation.py  template_content.py  urls.py  utilities.py  validators.py  views.py
netbox_dns/api/: field_serializers.py  nested_serializers.py  serializers.py  urls.py  views.py
netbox_dns/choices/: __init__.py  dnssec_key.py  dnssec_key_template.py  dnssec_policy.py  record.py  utilities.py  zone.py
netbox_dns/extras/: fields.py
netbox_dns/fields/: __init__.py  address.py  choice_array.py  ipam.py  network.py  rfc2317.py  timeperiod.py
netbox_dns/filters/: contact.py  nameserver.py  record.py  registrar.py  view.py  zone.py
netbox_dns/filtersets/: __init__.py  contact.py  dnssec_key.py  dnssec_key_template.py  dnssec_policy.py  nameserver.py  record.py  record_template.py  registrar.py  registration_contact.py  view.py  zone.py  zone_template.py
netbox_dns/forms/: __init__.py  contact.py  dnssec_key.py  dnssec_key_template.py  dnssec_policy.py  nameserver.py  record.py  record_template.py  registrar.py  registration_contact.py  view.py  zone.py  zone_template.py
netbox_dns/graphql/: __init__.py  contact.py  enums.py  filter_lookups.py  filters.py  nameserver.py  record.py  registrar.py  schema.py  types.py  view.py  zone.py
netbox_dns/migrations/: 0001_squashed_netbox_dns_0_15.py  0001_squashed_netbox_dns_0_22.py  0002_contact_description_registrar_description.py  0003_default_view.py  0004_create_and_assign_default_view.py  0005_alter_zone_view_not_null.py  0005_zone_soa_serial_auto.py  0006_templating.py  0006_update_ns_records.py  0007_alter_ordering_options.py  0007_view_prefixes.py  0008_rename_contact_registrationcontact.py  0008_view_prefixes.py  (+37 more)
(+234 files in other folders)
