[tool.poetry]
name = "netbox-plugin-dns"
version = "1.1b3"
description = "NetBox DNS is a NetBox plugin for managing DNS data."
authors = ["Peter Eckel <pete@netbox-dns.org>"]
homepage = "https://github.com/peteeckel/netbox-plugin-dns"
repository = "https://github.com/peteeckel/netbox-plugin-dns"
license = "MIT"
readme = "README.md"
packages = [{include = "netbox_dns"}]
exclude = ["netbox_dns/tests/*"]
keywords = ["netbox", "netbox-plugin", "dns"]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]

[tool.poetry.dependencies]
python = "^3.10"
dnspython = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
black = ">24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
