[project]
name = "netbox-plugin-dns"
version = "1.3.4"
description = "NetBox DNS is a NetBox plugin for managing DNS data."
authors = [
    {name="Peter Eckel", email="pete@netbox-dns.org"},
]
license-files = [
    "LICENSE"
]
readme = "README.md"
keywords = ["netbox", "netbox-plugin", "dns"]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
    "dnspython",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/peteeckel/netbox-plugin-dns"
Documentation = "https://github.com/peteeckel/netbox-plugin-dns/blob/main/docs/using_netbox_dns.md"
Repository = "https://github.com/peteeckel/netbox-plugin-dns"
Issues = "https://github.com/peteeckel/netbox-plugin-dns/issues"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
exclude = ["examples*", "media*", "*.tests*"]

[tool.setuptools.package-data]
"netbox_dns" = ["templates/**/*.html", "locale/**/*.mo"]
